--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>shell</artifactId>
+    <artifactId>hive</artifactId>
 
 
 </project>
