--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>log-collector</module>
-        <module>shell</module>
         <module>flume</module>
+        <module>hive</module>
     </modules>
 
 
