--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>hive</artifactId>
 
+    <dependencies>
+        <dependency>
+
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
