--- a/flume/src/main/resources/kafka2hdfs.conf
+++ b/flume/src/main/resources/kafka2hdfs.conf
@@ -22,7 +22,7 @@ a1.sources.r2.kafka.bootstrap.servers = hadoop102:9092,hadoop103:9092,hadoop104:
 a1.sources.r2.kafka.topics = topic_event
     # 一个批次向 channel 写入的最大消息数
 a1.sources.r2.batchSize = 5000
-    # 一个批次的数据最长的等待时间
+    # 一个批次的数据最长的等待时间  (批次数据达到 5000 或者时间已经达到了 2000ms 则开始向 channel 写数据)
 a1.sources.r2.batchDurationMillis = 2000
 # 配置 sources 结束
 
@@ -37,7 +37,7 @@ a1.channels.c1.checkpointDir = /opt/module/flume-1.7.0/data/behavior1
 a1.channels.c1.maxFileSize = 2146435071
     # channel 的容量
 a1.channels.c1.capacity = 1000000
-    # 等待put操作的总时间
+    # 等待put操作的总时间 (如果 channel 已经满了, 等多久开始回滚)
 a1.channels.c1.keep-alive = 6
 ## 配置 c2
 a1.channels.c1.type = file
@@ -76,16 +76,16 @@ a1.sinks.k2.hdfs.round = true
 a1.sinks.k2.hdfs.roundValue = 10
 a1.sinks.k2.hdfs.roundUnit = second
 
-## 不要产生大量小文件
-a1.sinks.k1.hdfs.rollInterval = 10
-a1.sinks.k1.hdfs.rollSize = 134217728
-a1.sinks.k1.hdfs.rollCount = 0
+## 不要产生大量小文件   满足任意一个就开始滚动
+a1.sinks.k1.hdfs.rollInterval = 0  // 10s 滚动新文件
+a1.sinks.k1.hdfs.rollSize = 134217728 // 达到大小滚动新文件
+a1.sinks.k1.hdfs.rollCount = 0 // 设置为 0 关闭
 
 a1.sinks.k2.hdfs.rollInterval = 10
 a1.sinks.k2.hdfs.rollSize = 134217728
 a1.sinks.k2.hdfs.rollCount = 0
 
-## 控制输出文件是否原生文件。
+## 控制输出文件是否原生文件。   启用压缩
 a1.sinks.k1.hdfs.fileType = CompressedStream
 a1.sinks.k2.hdfs.fileType = CompressedStream
 a1.sinks.k1.hdfs.codeC = lzop
