--- a/flume/src/main/resources/file2kafka.conf
+++ b/flume/src/main/resources/file2kafka.conf
@@ -9,12 +9,12 @@ a1.sources.r1.type = TAILDIR
 a1.sources.r1.filegroups = f1
 # 给每个文件组置文件
 a1.sources.r1.filegroups.f1=/tmp/logs/app.+
-# 记住传输的位置, 端点续传使用
+# 记住传输的位置, 断点续传使用
 a1.sources.r1.positionFile=/opt/module/flume-1.7.0/taildir_position.json
 
 # 配置 channel Selector
 a1.sources.r1.selector.type = multiplexing
-# 需求在拦截器中完成添加 header 的工作
+# 需要在拦截器中完成添加 header 的工作
 a1.sources.r1.selector.header = topic
 a1.sources.r1.selector.mapping.topic_start = c1
 a1.sources.r1.selector.mapping.topic_event = c2
@@ -30,7 +30,7 @@ a1.sources.r1.interceptors.i2.type = com.atguigu.dw.flume.interceptor.LogTypeInt
 a1.channels.c1.type = org.apache.flume.channel.kafka.KafkaChannel
 a1.channels.c1.kafka.bootstrap.servers = hadoop201:9092,hadop202:9092,hadoop203:9092
 a1.channels.c1.kafka.topic = topic_start
-# 应该配置 false
+# 应该配置 false  表示是否需要把 event 的结构放入到的 kafka 的 topic 中
 a1.channels.c1.parseAsFlumeEvent = false
 
 
