--- a/spring-boot-echarts-master/src/main/resources/application.properties
+++ b/spring-boot-echarts-master/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://hadoop102:3306/gmall?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=000000
+spring.datasource.password=aaaaaa
 #
 #
 spring.devtools.restart.enabled=true
